--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="main-title">Rick And Morty Project</h1>
+        <h1 class="main-title">Branch HyM Soft</h1>
     </header>
     <main id="characters">
         <div id="lds-ring" class="lds-ring">
